Updating pro shop pics.

--- a/assets/scss/elements/_banner.scss
+++ b/assets/scss/elements/_banner.scss
@@ -690,7 +690,7 @@ $subpage-height: 550px;
     }
   }
   &.pro-shop-banner {
-    background-image: url(../images/low-angle-ball.jpg);
+    background-image: url(../images/stagg-pro-shop.jpg);
     .overlay {
       background-image: $darker-background-gradient;
     }
